# Skybridge-Compass

./: .gitignore  AGENTS.md  BUILDING.md  CODEX_COMMIT_UPDATE.md  CODEX_FIX_INSTRUCTIONS.md  CODEX_FIX_README.md  FEATURE_DESIGN_v2.md  IOS_CLIENT_DESIGN.md  Package.swift  Package.swift.bak  README.md  REMOTE_SETUP.md  SkyBridge Compass iOS  assemble-offline.sh  azure-pipelines.yml  build.gradle.kts  codex-build-ultimate.sh  codex_build_fixes.md  codex_direct_fix.sh  codex_immediate_fix.sh  codex_network_fix.sh  codex_offline_setup.sh  codex_quick_fix.sh  codex_real_fix.sh  codex_sdk_fix.sh  codex_simple_fix.sh  compile_paper.sh  fix_build_errors.sh  gradle.properties  gradlew  launch_with_env.sh  local.properties  offline-verify.sh  project-status.md  project.yml  run_app.sh  settings.gradle.kts  setup-java.sh  setup_supabase_keychain.swift  setup_supabase_keychain_fixed.swift  (+3 more)
.github/workflows/: macos-build.yml  windows-build.yml
DerivedData/: info.plist
DerivedData/ModuleCache.noindex/: Accessibility-99NFOF22Y0ULTCFCU28UKNDI0.pcm  ActivityKit-89OV67SZW6KKMG0OP7SAOCR1W.pcm  AppIntents-A419M6O5RHUQQTNC1OBQKNEED.pcm  ApplicationServices-3GPAJIE889KF5UH3R54D0H91G.pcm  AuthenticationServices-81STE50TX7X1U1FVOFCM4UC5N.pcm  BackgroundTasks-A78CI2KBCGLSK5RNG6JBNSMTH.pcm  CFNetwork-CQZOZ0UV5ERLBTSI5UEZ07HTC.pcm  CUPS-DOAH1MINISHQN5XA3GD6PQ5PP.pcm  ColorSync-3JYUSC2RT7CZLFW0ALQUF3U59.pcm  Compression-9PX45GQW2OP5KRGYS7Q5G115B.pcm  CoreAudio-3SMJQF7O78VEPSGXDNQXLLBDZ.pcm  CoreAudioTypes-BUESUDP267T6FJCKTB8RM64WC.pcm  CoreData-JRR72LTHFZ1RC3IQI71R7W8J.pcm  CoreFoundation-814N9EW0OLINN59K82BW3Q7I7.pcm  CoreGraphics-19PSGC88DMWH4HKXN4P92KS57.pcm  CoreImage-B0SF7XQ7R6QMB8Z6T01I6F4AQ.pcm  CoreLocation-4Y5Z6XV0SRPXXGN3P0513Y3LP.pcm  CoreMedia-AIZIZ2SYJQYNTOMYW8QU0K0OU.pcm  CoreSpotlight-E6SJR99AC4501S4SK5U0IFX7Q.pcm  CoreText-4VI7VD57RRXYMGPLP9DFJP9MF.pcm  CoreTransferable-1J88VYA8IU15YLZLKCSUMJ7WZ.pcm  CoreVideo-22OU4YH2JNSPGUCF88KDSN8T3.pcm  DataDetection-2O7PB7CNQNGPAPKWUOZNRFIQO.pcm  DeveloperToolsSupport-KBNGJQI8C4FCKBKISVN1L7RI.pcm  DiskArbitration-DW8MV4RZKBYQ7GA5WXXVG9N7L.pcm  Dispatch-E0ZHB25HIYPGLC4HRXW9WH3W4.pcm  ExtensionFoundation-E6DPX5G1BVPLFOWSV165NOMQ.pcm  IOSurface-7CTSLCONAD7T8OQ3F31N9R6CE.pcm  ImageIO-7TZIULQAXR0XYTBIUZKJ4P0AX.pcm  Intents-BYZHW4VYZVXZJDFE88CAX1Y29.pcm  LocalAuthentication-8DEWNTHI0JV1C6FOBHB3INRNN.pcm  MachO-13AFF11PT610YPTDF3YH3RH4S.pcm  Metal-3MYHNKA5J6E8ARCPJTI5YC3NG.pcm  (+47 more)
Docs/: Android_PQC_Implementation.md  CrossPlatformDiscoveryDesign.md  DOCX_EXPORT.md  IEEE_Paper_SkyBridge_Compass_patched.docx  IEEE_Paper_SkyBridge_Compass_patched.md  IEEE_Paper_SkyBridge_Compass_patched.preview.html  IEEE_Paper_SkyBridge_Compass_patched.preview.md  IEEE_Paper_SkyBridge_Compass_patched.tex  NUMBERS_LEDGER.md  ProtocolAlignmentPlan.md  README.md  README_SUBMISSION_TDSC-2026-01-0318.md  Settings_Audit.md  SkyBridge_CrossPlatform_API.md  SkyBridge_Device_Discovery.md  SkyBridge_QuickStart.md  TDSC-2026-01-0318_IEEE_Paper_SkyBridge_Compass_patched.tex  TDSC-2026-01-0318_supplementary.tex  Widget_Extension_Setup.md  _docx_export.tex  _pandoc_reference.docx  audit_pdf.sh  export_docx.py  settings_inventory.json  supp_appendix_numbers_ledger.tex  supplementary.tex  登录方式技术说明.md  跨平台设备发现与连接技术说明.md
Scripts/: aggregate_realnet.py  audit_p2p_safety.sh  build_dmg.sh  build_freerdp_xcframework.sh  build_paperpal_docx.py  build_with_widgets.sh  check_macos_deps.sh  check_sensitive_artifacts.sh  ci_check.sh  ci_deprecation_check.sh  derive_audit_signal_fidelity.py  enable_freerdp_xcframework_in_spm.sh  generate_ieee_figures.py  make_tables.py  package_app.sh  parse_baseline_capture.py  plot_failure_histogram.py  plot_handshake_latency.py  plot_message_sizes.py  plot_policy_downgrade.py  register_ssh_host_key.swift  release_no_print_guard.zsh  run_baseline_bench.sh  run_network_bench.swift  run_network_bench_fast.swift  run_network_bench_retry.swift  run_paper_eval.sh  run_real_network_e2e.swift  run_real_network_probe.swift  run_tests_local.sh  sign_app.sh  typecheck_negative.sh  validate_signature_db_key.sh  wire_format_sanity.py
SkyBridge Compass iOS/: .gitignore  BUILD.md  BUILD_FIXES.md  COMPLETION_REPORT.md  FEATURE_PARITY.md  FILES_CREATED.md  PROJECT_SUMMARY.md  Package.resolved  Package.swift  QUICKSTART.md  QUICKSTART_UPDATED.md  README.md  SkyBridgeCompass-iOSDebug.entitlements  project.yml  setup_symlinks.sh
SkyBridgeWidgets.xcodeproj/: project.pbxproj
YunQiaoSiNan/: gradle.properties  gradle.properties.bak  gradlew
app/: build.gradle.kts  proguard-rules.pro
backend/: Cargo.toml
core/skybridge-core/: Cargo.toml
core/skybridge-core/src/: crypto.rs  error.rs  ffi.rs  lib.rs  session.rs  stream.rs
core/skybridge-core/tests/: ffi_lifecycle.rs  state_machine.rs
docs/: OFFLINE_BUILD.md  apk_build_status.md  macos_app_design.md  merge_integration_guide.md  message_sync_strategy.md  windows-architecture.md
fastlane/: Appfile  Fastfile  README.md
formal/: README.md  run_tamarin.sh  skybridge_minimal.spthy
frontend/: next.config.ts  package-lock.json  package.json
gradle/: libs.versions.toml
ios-app/: Info.plist  Package.swift
offline-build-tools/: BUILD_GUIDE.md  CODEX_XCODE_ANALYSIS.md  README.md  assemble-offline.sh  codex-build-fixed.sh  codex-build-ultimate.sh  codex-build.properties  codex-build.sh  codex-env-check.sh  codex-flutter-build.sh  gradle.properties  offline-build.sh
scripts/: codex-build-offline.sh  codex-env-check.sh  codex-generate-deps.sh  codex-gradle-dist-check.sh  codex-offline-import.sh  generate-app-icon.sh  save-clipboard-app-icon.jxa  save-clipboard-app-icon.sh
web-dashboard/: .eslintrc.json  DEVICE_DISCOVERY_ANALYSIS.md  next.config.js  package-lock.json  package.json  stylelint.config.js  tailwind.config.ts  tsconfig.json
windows-native-toolkit/: CODEX_SETUP.md  CODEX_TEST_ANALYSIS.md  CODEX_WINDOWS_TOOLCHAIN_ANALYSIS.md  CODEX_WORKFLOW_SOLUTION.md  README.md
windows-native-toolkit/templates/winui3-app/: CMakeLists.txt
windows-native-toolkit/templates/winui3-app/src/: config.h.in  main.cpp
(+5628 files in other folders)
